# uiuc_incas_server/models/__init__.py
@@ -21,13 +21,15 @@ from uiuc_incas_server.models.actor_batch_get_body import ActorBatchGetBody
 from uiuc_incas_server.models.actor_enrichment import ActorEnrichment
 from uiuc_incas_server.models.actor_enrichment_meta import ActorEnrichmentMeta
 from uiuc_incas_server.models.actor_enrichments_batch_delete_body import ActorEnrichmentsBatchDeleteBody
+from uiuc_incas_server.models.actor_enrichments_batch_delete_validation_response import ActorEnrichmentsBatchDeleteValidationResponse
 from uiuc_incas_server.models.actor_enrichments_batch_get_body import ActorEnrichmentsBatchGetBody
 from uiuc_incas_server.models.actor_enrichments_batch_validation_response import ActorEnrichmentsBatchValidationResponse
 from uiuc_incas_server.models.actor_id_response import ActorIdResponse
 from uiuc_incas_server.models.actor_message_graph import ActorMessageGraph
 from uiuc_incas_server.models.actor_message_graph_db import ActorMessageGraphDB
-from uiuc_incas_server.models.actor_segment_collections import ActorSegmentCollections
+from uiuc_incas_server.models.actor_segment_collection import ActorSegmentCollection
 from uiuc_incas_server.models.actor_segments_batch_delete_body import ActorSegmentsBatchDeleteBody
+from uiuc_incas_server.models.actor_segments_batch_delete_validation_response import ActorSegmentsBatchDeleteValidationResponse
 from uiuc_incas_server.models.actor_segments_batch_get_body import ActorSegmentsBatchGetBody
 from uiuc_incas_server.models.actor_segments_batch_validation_response import ActorSegmentsBatchValidationResponse
 from uiuc_incas_server.models.annotation import Annotation
@@ -55,6 +57,7 @@ from uiuc_incas_server.models.message_batch_get_body import MessageBatchGetBody
 from uiuc_incas_server.models.message_enrichment import MessageEnrichment
 from uiuc_incas_server.models.message_enrichment_meta import MessageEnrichmentMeta
 from uiuc_incas_server.models.message_enrichments_batch_delete_body import MessageEnrichmentsBatchDeleteBody
+from uiuc_incas_server.models.message_enrichments_batch_delete_validation_response import MessageEnrichmentsBatchDeleteValidationResponse
 from uiuc_incas_server.models.message_enrichments_batch_get_body import MessageEnrichmentsBatchGetBody
 from uiuc_incas_server.models.message_enrichments_batch_validation_response import MessageEnrichmentsBatchValidationResponse
 from uiuc_incas_server.models.message_id_response import MessageIdResponse
