# uiuc_incas_server/models/message_enrichments_batch_delete_validation_response.py
@@ -15,7 +15,7 @@ import re  # noqa: F401
 
 import six
 
-class ActorSegmentCollections(dict):
+class MessageEnrichmentsBatchDeleteValidationResponse(object):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
@@ -28,19 +28,66 @@ class ActorSegmentCollections(dict):
                             and the value is json key in definition.
     """
     swagger_types = {
+        'id_invalid': 'list[str]',
+        'value_not_found': 'list[str]'
     }
-    if hasattr(dict, "swagger_types"):
-        swagger_types.update(dict.swagger_types)
 
     attribute_map = {
+        'id_invalid': 'idInvalid',
+        'value_not_found': 'valueNotFound'
     }
-    if hasattr(dict, "attribute_map"):
-        attribute_map.update(dict.attribute_map)
 
-    def __init__(self, *args, **kwargs):  # noqa: E501
-        """ActorSegmentCollections - a model defined in Swagger"""  # noqa: E501
+    def __init__(self, id_invalid=None, value_not_found=None):  # noqa: E501
+        """MessageEnrichmentsBatchDeleteValidationResponse - a model defined in Swagger"""  # noqa: E501
+        self._id_invalid = None
+        self._value_not_found = None
         self.discriminator = None
-        dict.__init__(self, *args, **kwargs)
+        if id_invalid is not None:
+            self.id_invalid = id_invalid
+        if value_not_found is not None:
+            self.value_not_found = value_not_found
+
+    @property
+    def id_invalid(self):
+        """Gets the id_invalid of this MessageEnrichmentsBatchDeleteValidationResponse.  # noqa: E501
+
+
+        :return: The id_invalid of this MessageEnrichmentsBatchDeleteValidationResponse.  # noqa: E501
+        :rtype: list[str]
+        """
+        return self._id_invalid
+
+    @id_invalid.setter
+    def id_invalid(self, id_invalid):
+        """Sets the id_invalid of this MessageEnrichmentsBatchDeleteValidationResponse.
+
+
+        :param id_invalid: The id_invalid of this MessageEnrichmentsBatchDeleteValidationResponse.  # noqa: E501
+        :type: list[str]
+        """
+
+        self._id_invalid = id_invalid
+
+    @property
+    def value_not_found(self):
+        """Gets the value_not_found of this MessageEnrichmentsBatchDeleteValidationResponse.  # noqa: E501
+
+
+        :return: The value_not_found of this MessageEnrichmentsBatchDeleteValidationResponse.  # noqa: E501
+        :rtype: list[str]
+        """
+        return self._value_not_found
+
+    @value_not_found.setter
+    def value_not_found(self, value_not_found):
+        """Sets the value_not_found of this MessageEnrichmentsBatchDeleteValidationResponse.
+
+
+        :param value_not_found: The value_not_found of this MessageEnrichmentsBatchDeleteValidationResponse.  # noqa: E501
+        :type: list[str]
+        """
+
+        self._value_not_found = value_not_found
 
     def to_dict(self):
         """Returns the model properties as a dict"""
@@ -63,7 +110,7 @@ class ActorSegmentCollections(dict):
                 ))
             else:
                 result[attr] = value
-        if issubclass(ActorSegmentCollections, dict):
+        if issubclass(MessageEnrichmentsBatchDeleteValidationResponse, dict):
             for key, value in self.items():
                 result[key] = value
 
@@ -79,7 +126,7 @@ class ActorSegmentCollections(dict):
 
     def __eq__(self, other):
         """Returns true if both objects are equal"""
-        if not isinstance(other, ActorSegmentCollections):
+        if not isinstance(other, MessageEnrichmentsBatchDeleteValidationResponse):
             return False
 
         return self.__dict__ == other.__dict__
